--- a/Assignment 2/SidebarUi.ui
+++ b/Assignment 2/SidebarUi.ui
@@ -17,19 +17,19 @@
    <item>
     <widget class="QToolBox" name="toolBox">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="page">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>248</width>
-        <height>423</height>
+        <width>223</width>
+        <height>461</height>
        </rect>
       </property>
       <attribute name="label">
-       <string>Model Selection</string>
+       <string>Model and Animation</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <property name="leftMargin">
@@ -39,7 +39,26 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QComboBox" name="selectModel"/>
+        <widget class="QGroupBox" name="groupBox_7">
+         <property name="title">
+          <string>Model Selection</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_6" columnstretch="0,1">
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_15">
+            <property name="text">
+             <string>Skin</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QComboBox" name="selectSkin"/>
+          </item>
+          <item row="0" column="0" colspan="2">
+           <widget class="QComboBox" name="selectModel"/>
+          </item>
+         </layout>
+        </widget>
        </item>
        <item>
         <spacer name="verticalSpacer_2">
@@ -53,6 +72,51 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_8">
+         <property name="title">
+          <string>Animation Controls</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_5">
+          <item row="0" column="0" colspan="2">
+           <widget class="QComboBox" name="selectAnimation"/>
+          </item>
+          <item row="0" column="2">
+           <widget class="QPushButton" name="playPause">
+            <property name="text">
+             <string>Play</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_14">
+            <property name="text">
+             <string>FPS</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QSlider" name="animationFps">
+            <property name="minimum">
+             <number>2</number>
+            </property>
+            <property name="maximum">
+             <number>120</number>
+            </property>
+            <property name="value">
+             <number>10</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QSpinBox" name="animationFpsSpin"/>
+          </item>
+         </layout>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -369,6 +433,111 @@
       <attribute name="label">
        <string>View Transformations</string>
       </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_7">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="groupBox_6">
+         <property name="title">
+          <string>Location</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_4">
+          <property name="horizontalSpacing">
+           <number>15</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>2</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_11">
+            <property name="text">
+             <string>X</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_12">
+            <property name="text">
+             <string>Z</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_13">
+            <property name="text">
+             <string>Y</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QSlider" name="xView">
+            <property name="minimum">
+             <number>-100</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSlider" name="yView">
+            <property name="minimum">
+             <number>-100</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QSlider" name="zView">
+            <property name="minimum">
+             <number>-100</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QSpinBox" name="xTranslationSpin_2"/>
+          </item>
+          <item row="1" column="2">
+           <widget class="QSpinBox" name="yTranslationSpin_2"/>
+          </item>
+          <item row="2" column="2">
+           <widget class="QSpinBox" name="zTranslationSpin_2"/>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="page_4">
       <attribute name="label">
@@ -470,6 +639,44 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>showNormals</tabstop>
+  <tabstop>selectSkin</tabstop>
+  <tabstop>selectAnimation</tabstop>
+  <tabstop>playPause</tabstop>
+  <tabstop>animationFps</tabstop>
+  <tabstop>animationFpsSpin</tabstop>
+  <tabstop>xTranslation</tabstop>
+  <tabstop>xTranslationSpin</tabstop>
+  <tabstop>yTranslation</tabstop>
+  <tabstop>yTranslationSpin</tabstop>
+  <tabstop>zTranslation</tabstop>
+  <tabstop>zTranslationSpin</tabstop>
+  <tabstop>rRotation</tabstop>
+  <tabstop>rRotationSpin</tabstop>
+  <tabstop>pRotation</tabstop>
+  <tabstop>pRotationSpin</tabstop>
+  <tabstop>yRotation</tabstop>
+  <tabstop>yRotationSpin</tabstop>
+  <tabstop>uScale</tabstop>
+  <tabstop>uScaleSpin</tabstop>
+  <tabstop>xScale</tabstop>
+  <tabstop>xScaleSpin</tabstop>
+  <tabstop>yScale</tabstop>
+  <tabstop>yScaleSpin</tabstop>
+  <tabstop>zScale</tabstop>
+  <tabstop>zScaleSpin</tabstop>
+  <tabstop>xView</tabstop>
+  <tabstop>xTranslationSpin_2</tabstop>
+  <tabstop>yView</tabstop>
+  <tabstop>yTranslationSpin_2</tabstop>
+  <tabstop>zView</tabstop>
+  <tabstop>zTranslationSpin_2</tabstop>
+  <tabstop>selectModel</tabstop>
+  <tabstop>smooth</tabstop>
+  <tabstop>flat</tabstop>
+  <tabstop>wireframe</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
