Added code comments

--- a/Assignment 2/SidebarUi.ui
+++ b/Assignment 2/SidebarUi.ui
@@ -667,19 +667,6 @@ detected.</string>
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Shading Mode</string>
@@ -734,6 +721,19 @@ detected.</string>
         </widget>
        </item>
        <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupBox_3">
          <property name="title">
           <string>Additional Display Options</string>
@@ -743,6 +743,13 @@ detected.</string>
            <widget class="QCheckBox" name="showNormals">
             <property name="text">
              <string>Show Normals</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="handMath">
+            <property name="text">
+             <string>Use Hand-Written Math</string>
             </property>
            </widget>
           </item>
